<resources>
    <string name="app_name">Gate App-OyeSpace</string>

    <string name="Rupee">₹</string>
    <string name="rupee">\u20B9</string>
    <string name="linear_sectioned_recyclerview_vertical">Linear Sectioned RecyclerView (Vertical)</string>
    <string name="linear_sectioned_recyclerview_horizontal">Linear Sectioned RecyclerView (Horizontal)</string>
    <string name="grid_sectioned_recyclerview">Grid Sectioned RecyclerView</string>
    <string name="show_all">Show All</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="some_wrng">Something went Wrong</string>
    <string name="no_internet">No Internet</string>
    <string name="ledon">LED</string>
    <string name="ledoff">LED Off</string>
    <string name="sdktest">SDK Test</string>
    <string name="toggle_led">Toggle LED</string>
    <string name="match">Verify</string>
    <string name="register">Register</string>
    <string name="captureFingerPrint">Capture Fingerprint</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome!</string>
    <string name="cb_matched">Match</string>
    <string name="cb_scenabled">SC En</string>
    <string name="auto_on">Auto On</string>
    <string name="smart_capture">Smart Capture</string>
    <string name="smart_capture_on">Smart Cap ON</string>
    <string name="smart_capture_off">Smart Cap OFF</string>
    <string name="auto_on_enabled">AutoOn ON</string>
    <string name="auto_on_disabled">AutoOn OFF</string>
    <string name="capture_mode_n_on">Mode N ON</string>
    <string name="capture_mode_n_off">Mode N OFF</string>
    <string name="NFIQ_enabled">NFIQ ON</string>
    <string name="NFIQ_disabled">NFIQ OFF</string>
    <string name="usb_bulk_mode_64_on">USB Bulk 64 ON</string>
    <string name="usb_bulk_mode_64_off">USB Bulk 64 OFF</string>
    <string name="fingerprint_capture_image">Fingerprint capture image</string>
    <string name="fingerprint_register_image">Fingerprint register image</string>
    <string name="fingerprint_verify_image">Fingerprint verify image</string>
    <string name="secugen_device_image">SecuGen device image</string>
    <string name="read_serial_number">Read S/N</string>
    <string name="set_brightness_0">Set Brightness 0</string>
    <string name="set_brightness_100">Set Brightness 100</string>
    <string name="log">Log</string>

    <string name="textvalidtill">Valid till:</string>
    <string name="textversion">Version:</string>
    <string name="textstaff">Staff</string>
    <string name="textvehiclle">Vehicle</string>
    <string name="textdelivery">Delivery</string>
    <string name="textlanguagesettings">Language Settings</string>
    <string name="textassociationname">Association Name</string>
    <string name="textexit">Exit</string>
    <string name="textcapturephoto">Capture Photo</string>
    <string name="textnext">Next</string>
    <string name="textupload">Upload</string>
    <string name="textloginscreen">Login Screen</string>
    <string name="textsendotp">Send OTP</string>
    <string name="textphonenumber">Phone Number</string>
    <string name="textskip">Skip</string>
    <string name="textcallmobilenumber">Call Mobile Number</string>
    <string name="textnameentryscreen">Name Entry Screen</string>
    <string name="textentername">Enter Name</string>
    <string name="textselectdeliveryfrom">Select Delivery From</string>
    <string name="textname">Name</string>
    <string name="textmobile">Mobile</string>
    <string name="textfor">For:</string>
    <string name="textfrom">From:</string>
    <string name="textperson">Persons</string>
    <string name="textdone">Done</string>
    <string name="textadd">Add</string>
    <string name="textsearchbyname">Search by Name</string>
    <string name="textsearchflat">Select Flat/Unit</string>
    <string name="textselectlanguage">Select Language</string>
    <string name="textenglish">English</string>
    <string name="texthindi">Hindi</string>
    <string name="textshowall">Show All</string>
    <string name="texteditvn">Edit the vechical number</string>
    <string name="textother">OTHER</string>
    <string name="textguest">Guest</string>
    <string name="textlookingforqr">Looking for Guest QR Code</string>
    <string name="textnoqrcode">No qr code</string>
    <string name="textpatrollingscreen">Patrolling Screen</string>
    <string name="textstart">Start</string>
    <string name="textend">End</string>
    <string name="textscancheckpoint">Scan Checkpoint</string>
    <string name="textstaffdesignationselection">Staff Designation Selection</string>
    <string name="textstringentry">Make Entry</string>
    <string name="textbiometric">BioMetric</string>
    <string name="texttakepersonphoto">Take Person Photo</string>
    <string name="textretakepersonphoto">ReTake Person Photo</string>
    <string name="texttakeproductphoto">Take Product Photos</string>
    <string name="textpersonanditemphoto">Person and Product Photo Screen</string>
    <string name="texteditvehicleno">Edit the Vehicle number</string>
    <string name="textpatrolling">Patrolling</string>
    <string name="textverify">Verify</string>

    <string name="textto">To:</string>

    <string name="textdesignation">Designation:</string>

    <string name="textpurpose">purpose of visit</string>
    <string name="textgivemissedcall">Get Missed Call on:</string>
    <string name="textidcard">ID Card for:</string>
    <string name="textenterpurpose">Enter Purpose</string>
    <string name="textpersonphotoscreen">Person\'s Photo Screen</string>
    <string name="textemergency">Emergency</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="textvisiting">Visiting</string>
    <string name="textmissedcallby">Get Missed Call by:</string>
    <string name="textnodata">No Data</string>

    <string name="units_list_title">Units List</string>
    <string name="units_selection_title">Select Units</string>
    <string name="blocks_selection_title">Select Blocks</string>
</resources>
