<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:id="@+id/rl_header"
                    android:background="@color/white"
    >


        <ImageView android:layout_width="150dp"
                   android:layout_height="40dp"
                   android:id="@+id/rl_header1"
                   android:layout_centerHorizontal="true"
                   android:layout_margin="@dimen/_2sdp"
                   android:src="@drawable/oyespace_toolbar"/>

        <Button
                android:id="@+id/buttonNextt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2sdp"
                android:layout_alignParentRight="true"
                android:padding="@dimen/_2sdp"
                android:onClick="onClick"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:background="@drawable/square"
                android:textSize="@dimen/_10sdp" />

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/view1"
            android:layout_width="match_parent"
                    android:layout_below="@+id/rl_header"
                    android:layout_height="2dp"
                    android:background="@color/orange">

    </RelativeLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="3"
                  android:id="@+id/lyt"
                  android:layout_below="@+id/view1"
                  android:orientation="horizontal">

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/txt_device_name"
                  android:textColor="@color/black"
                  android:layout_weight="1"
                  android:textStyle="bold"
                  android:textSize="10sp"
                  android:padding="2dp"
                  android:text="Deeee"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/txt_assn_name"
                  android:textColor="@color/black"
                  android:layout_weight="1"
                  android:textStyle="bold"
                  android:textSize="12sp"
                  android:padding="2dp"
                  android:text="Association Name"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/txt_gate_name"
                  android:textColor="@color/black"
                  android:textStyle="bold"
                  android:layout_weight="1"

                  android:textSize="12sp"
                  android:padding="2dp"
                  android:text="Gate Name"/>
    </LinearLayout>


    <RelativeLayout
            android:id="@+id/lyt2"
            android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/lyt"
                    android:background="@color/orange">

    </RelativeLayout>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/lyt2"
              android:textColor="@color/black"
              android:layout_centerInParent="true"
              android:layout_margin="5dp"
              android:text="@string/textpurpose"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"

            android:layout_centerInParent="true">

        <EditText android:id="@+id/Ed_Name_purp"
                  android:layout_width="match_parent"
                  android:layout_height="54dp"
                  android:layout_gravity="center"
                  android:hint="@string/textenterpurpose"
                  android:inputType="textCapWords"
                  android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ .'"
                  android:layout_marginLeft="4dp"
                  android:layout_marginRight="4dp"
                  android:layout_centerInParent="true"
                  android:layout_weight="1"
                  android:gravity="left"/>
        <ImageView
                android:id="@+id/Btn_Mic"
                android:layout_below="@+id/Ed_Name_purp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:src="@drawable/microphone_640"/>

    </LinearLayout>



</RelativeLayout>